@@ -1,7 +1,7 @@
 [main]
 host = https://www.transifex.com
 
-[gravityflowfolders.gravityflowfolderspot]
+[gravityflowfolders.gravityflowfolders]
 file_filter = languages/gravityflowfolders-<lang>.po
 source_file = languages/gravityflowfolders.pot
 source_lang = en_US
