@@ -1,3 +1,5 @@
 - Added logging statements.
+- Added support for Gravity Forms 2.3
 - Fixed a PHP notice which could occur when getting the folders.
 - Fixed an issue with the shortcode where entries in the folder may not be displayed.
+- Fixed an issue with the link to the folders list page from the breadcrumbs where the id parameter is not removed.
